--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OnlineShopDatabase": "Server=I594;Database=OnlineShop;Trusted_Connection=True;"
+    "OnlineShopDatabase": "Server=172.30.20.8\\I577,14789;Database=OnlineShop;Trusted_Connection=True;"
   }
 }
