--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -8,7 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"OnlineShopDatabase": "Server=172.30.20.8\\I577,14789;Database=OnlineShop;Trusted_Connection=True;"
-    "OnlineShopDatabase": "Server=I594;Database=OnlineShop;Trusted_Connection=True;"
+    //Server位置
+    "OnlineShopDatabase": "Server=172.30.20.8\\I577,14789;Database=OnlineShop;Trusted_Connection=True;"
+    //自己的Server位置
+    //"OnlineShopDatabase": "Server=I594;Database=OnlineShop;Trusted_Connection=True;"
   }
 }
