--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -14,3 +14,5 @@
     //"OnlineShopDatabase": "Server=I594;Database=OnlineShop;Trusted_Connection=True;"
   }
 }
+
+//nuget : https://api.nuget.org/v3/index.json
