20220525 1.添加購物車(資料庫語法待更新，程式部分須更正)

--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -9,9 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //Server位置
-    "OnlineShopDatabase": "Server=172.30.20.8\\I577,14789;Database=OnlineShop;Trusted_Connection=True;"
+    //"OnlineShopDatabase": "Server=172.30.20.8\\I577,14789;Database=OnlineShop;Trusted_Connection=True;"
     //自己的Server位置
-    //"OnlineShopDatabase": "Server=I594;Database=OnlineShop;Trusted_Connection=True;"
+    "OnlineShopDatabase": "Server=I594;Database=OnlineShop;Trusted_Connection=True;"
   }
 }
 
