20220526 1.更新ProductCar購物車頁面內容(有部分Bug代修正 ex.重複id)

--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -16,3 +16,9 @@
 }
 
 //nuget : https://api.nuget.org/v3/index.json
+
+//C# ado.net mssql ×Ô¶¨Áx±í
+//https://www.51cto.com/article/288703.html
+
+//session
+//https://ithelp.ithome.com.tw/articles/10194799
